--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Infohub - Github Users Info</title>
-        <link rel="stylesheet" href="index-style.css">
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="css/index-style.css">
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="shortcut icon" href="Imgs/hub.png">
     </head>
 
@@ -24,6 +24,7 @@
 
             <input id="inputUserName" type="text" placeholder="User">
             <input id="submitRequest" type="submit" value="Submit">
+            <p class="errorMessage">Something went wrong looking for this user, make sure you've spelled it right.</p>
 
             <section id="userDisplay">
 
@@ -37,7 +38,7 @@
 
         <footer id="footer">
 
-            <p id="coyright">© 2020 Infohub by Ivan Valverde | This website is copyright free</p>
+            <p id="copyright">© 2020 Infohub by <a class="creator" href="https://github.com/ivanvalverde">Ivan Valverde</a> | This website is copyright free</p>
 
         </footer>
         
